@@ -5,6 +5,6 @@ settings_daemon_SOURCES = \
 	xsettings-manager.c xsettings-manager.h \
 	settings-daemon.c
 
-settings_daemon_CPPFLAGS = @APP_CFLAGS@
+settings_daemon_CPPFLAGS = @APP_CFLAGS@ -DHAVE_XFT2
 settings_daemon_CFLAGS = -Wall
 settings_daemon_LDADD = @APP_LIBS@ 
